--- a/index.html
+++ b/index.html
@@ -5,240 +5,238 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inviloader - Download YouTube Videos</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon -->
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="favicon.png" type="image/x-icon"> <!-- Favicon -->
 
+    <style>
         body {
             font-family: 'Quicksand', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #1b1b1b;
+            color: #e0e0e0;
         }
 
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 40px;
-            text-align: center;
-        }
+    background-image: url('background.webp'); /* Path to your background image */
+    background-size: cover; /* Ensures the image covers the entire header area */
+    background-position: center; /* Centers the image */
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
 
-        header h1 {
-            font-size: 3em;
-        }
-
-        header p {
-            font-size: 1.2em;
-        }
-
-        .get-started {
-            background-color: #fff;
-            padding: 40px;
-            text-align: center;
-        }
-
-        .get-started h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        .software-info {
-            padding: 40px;
-            text-align: center;
-        }
-
-        .software-info table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 30px;
-        }
-
-        .software-info th, .software-info td {
-            padding: 15px;
-            text-align: center;
-            border: 1px solid #ddd;
-        }
-
-        .software-info th {
-            background-color: #4CAF50;
-            color: white;
+        header img {
+            max-width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            margin-bottom: 10px;
         }
 
         .download-btn {
-            background-color: #4CAF50;
+            background-color: #6a0dad;
             color: white;
             padding: 10px 20px;
             border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
-            margin-bottom: 15px;
             display: inline-block;
         }
 
         .download-btn:hover {
-            background-color: #45a049;
+            background-color: #7323d0;
+            text-decoration: none; /* Ensure underline does not appear */
         }
 
-        .info {
-            font-size: 0.9em;
-            color: #777;
-            margin-top: 10px;
+        a {
+            text-decoration: none;
+            color: white;
         }
 
-        .ffmpeg-info {
-            background-color: #fff;
-            padding: 40px;
-            text-align: center;
+        a:hover {
+            text-decoration: underline;
         }
 
-        .ffmpeg-info p {
-            margin-bottom: 20px;
+        .youtube-link {
+            color: yellow;
+        }
+
+        .screenshots img {
+            width: 100%;
+            max-width: 300px;
+            margin: 10px auto;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .screenshots img:hover {
+            transform: scale(1.1); /* Zoom effect */
+        }
+
+        .screenshot-desc {
+            color: white;
+            margin-top: 5px;
+            font-size: 14px;
         }
 
         footer {
-            background-color: #333;
+            background-color: #111;
             color: white;
             text-align: center;
             padding: 20px;
         }
 
-        footer a {
-            color: #25D366;
-            text-decoration: none;
-            font-weight: bold;
+        footer .contact-icons img {
+            width: 30px;
+            height: 30px;
         }
 
         footer a:hover {
             text-decoration: underline;
         }
-
-        .whatsapp-icon {
-            width: 30px;
-            height: 30px;
-            margin-left: 10px;
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2.5em;
-            }
-
-            .software-info table {
-                font-size: 0.9em;
-            }
-
-            .get-started h2 {
-                font-size: 2em;
-            }
-
-            .software-info td, .software-info th {
-                font-size: 0.9em;
-            }
-
-            footer {
-                font-size: 0.8em;
-            }
-        }
     </style>
 </head>
 <body>
     <header>
+        <img src="inviloader.png" alt="Inviloader Logo">
         <h1>Welcome to Inviloader</h1>
         <p>Your powerful tool to download YouTube videos with ease</p>
     </header>
 
-    <section class="get-started">
+    <section class="get-started text-center py-5">
         <h2>Get Started with Inviloader</h2>
-        <p>Inviloader lets you download any YouTube video directly to your PC through a simple CMD command.</p>
+        <p>Inviloader is a revolutionary tool that allows you to download YouTube videos directly to your PC using a simple CMD command. Whether you want to save videos for offline viewing, backup content, or repurpose videos for personal use, Inviloader makes it fast and efficient.</p>
+        <p>The program works by integrating with FFmpeg, a powerful multimedia framework, to handle video and audio processing. Once set up, you can simply enter a YouTube video link into the command line, and Inviloader will take care of the rest.</p>
+        <p>Advantages of using Inviloader include:</p>
+        <ul class="text-start d-inline-block">
+            <li>Fast downloads with minimal system requirements.</li>
+            <li>Support for multiple video resolutions and formats.</li>
+            <li>Simple and user-friendly command-line interface.</li>
+            <li>Free version with robust features, and a premium version with advanced tools.</li>
+        </ul>
     </section>
 
-    <section class="software-info">
-        <h2>Free Version</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Version</th>
-                    <th>Size</th>
-                    <th>Release Date</th>
-                    <th>Version Code</th>
-                    <th>Features</th>
-                    <th>Download</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Add new free versions here -->
-                <tr>
-                    <td>Inviloader Version 6.0</td>
-                    <td>15MB</td>
-                    <td>January 2025</td>
-                    <td>6.0.0</td>
-                    <td>
-                        <ul>
-                            <li>Download YouTube videos in CMD</li>
-                            <li>Easy to use interface</li>
-                            <li>Supports all YouTube video formats</li>
-                        </ul>
-                    </td>
-                    <td><a href="inviloader_v6.0.exe" class="download-btn" download>Download Now</a></td>
-                </tr>
-            </tbody>
-        </table>
+    <section class="software-info container py-5">
+        <h2 class="text-center mb-4">Free Version</h2>
+        <div class="table-responsive">
+            <table class="table table-dark table-bordered text-center">
+                <thead>
+                    <tr>
+                        <th>Version</th>
+                        <th>Size</th>
+                        <th>Release Date</th>
+                        <th>Version Code</th>
+                        <th>Features</th>
+                        <th>Download</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Inviloader Version 6.0</td>
+                        <td>15MB</td>
+                        <td>January 2025</td>
+                        <td>6.0.0</td>
+                        <td>
+                            <ul class="list-unstyled mb-0">
+                                <li>Download YouTube videos in CMD</li>
+                                <li>Easy to use interface</li>
+                                <li>Supports all YouTube video formats</li>
+                            </ul>
+                        </td>
+                        <td><a href="inviloader_v6.0.exe" class="download-btn" download>Download Now</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-        <h2>Paid Version</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Version</th>
-                    <th>Size</th>
-                    <th>Release Date</th>
-                    <th>Version Code</th>
-                    <th>Features</th>
-                    <th>Download</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Add new paid versions here -->
-                <tr>
-                    <td>Inviloader Plus (Paid Version)</td>
-                    <td>20MB</td>
-                    <td>December 2024</td>
-                    <td>5.5.0</td>
-                    <td>
-                        <ul>
-                            <li>Advanced features for power users</li>
-                            <li>Batch downloads</li>
-                            <li>Faster download speeds</li>
-                            <li>Download from multiple sources</li>
-                        </ul>
-                    </td>
-                    <td><a href="inviloader_plus.exe" class="download-btn" download>Download Now</a></td>
-                </tr>
-            </tbody>
-        </table>
-
-        <p class="info">Version 6.0 is free to use. Inviloader Plus offers advanced features for power users and is available for purchase.</p>
+        <h2 class="text-center mb-4">Paid Version</h2>
+        <div class="table-responsive">
+            <table class="table table-dark table-bordered text-center">
+                <thead>
+                    <tr>
+                        <th>Version</th>
+                        <th>Size</th>
+                        <th>Release Date</th>
+                        <th>Version Code</th>
+                        <th>Features</th>
+                        <th>Download</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Inviloader Plus</td>
+                        <td>20MB</td>
+                        <td>December 2024</td>
+                        <td>5.5.0</td>
+                        <td>
+                            <ul class="list-unstyled mb-0">
+                                <li>Batch downloads</li>
+                                <li>Faster speeds</li>
+                                <li>Advanced features</li>
+                            </ul>
+                        </td>
+                        <td><a href="inviloader_plus.exe" class="download-btn" download>Download Now</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
 
-    <section class="ffmpeg-info">
-        <h2>FFmpeg Required</h2>
-        <p>Inviloader requires FFmpeg to function properly. Click the button below to download FFmpeg:</p>
-        <a href="ffmpeg.zip" class="download-btn" download>Download FFmpeg</a>
-        <p class="info">Follow the instructions below to install FFmpeg on your computer:</p>
-        <ol>
-            <li>Download FFmpeg using the button above.</li>
-            <li>Extract the contents of the zip file to a folder on your computer.</li>
-            <li>Navigate to the folder where you extracted FFmpeg.</li>
-            <li>Open the Command Prompt or Terminal and add the FFmpeg bin folder to your system's PATH environment variable.</li>
-            <li>Test the installation by typing <code>ffmpeg -version</code> in your command line.</li>
+    <section class="screenshots text-center py-5">
+        <h2>Program Screenshots</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-3">
+                <a href="pic1.png" target="_blank">
+                    <img src="pic1.png" alt="Screenshot 1">
+                    <p class="screenshot-desc">User-friendly interface</p>
+                </a>
+            </div>
+            <div class="col-md-3">
+                <a href="pic2.png" target="_blank">
+                    <img src="pic2.png" alt="Screenshot 2">
+                    <p class="screenshot-desc">CMD download process</p>
+                </a>
+            </div>
+            <div class="col-md-3">
+                <a href="pic3.png" target="_blank">
+                    <img src="pic3.png" alt="Screenshot 3">
+                    <p class="screenshot-desc">Batch download support</p>
+                </a>
+            </div>
+            <div class="col-md-3">
+                <a href="pic4.png" target="_blank">
+                    <img src="pic4.png" alt="Screenshot 4">
+                    <p class="screenshot-desc">Detailed progress tracking</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="installation-guide text-center py-5">
+        <h2>Installation Guide</h2>
+        <p>Follow these steps to install Inviloader and FFmpeg:</p>
+        <ol class="text-start d-inline-block">
+            <li>Download the latest version of Inviloader from the table above.</li>
+            <li>Install FFmpeg by clicking the link below:</li>
+            <a href="https://ffmpeg.org/download.html" class="download-btn" target="_blank">Download FFmpeg</a>
+            <li>Configure FFmpeg on your PC by adding it to your system's PATH environment variable.</li>
         </ol>
+        <p>Need more help? <a href="https://youtube.com/tutorial-link" target="_blank" class="youtube-link">Click here to view a tutorial on YouTube</a>.</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Inviloader | All Rights Reserved</p>
-        <p>Chat with us on WhatsApp <a href="https://wa.me/123456789" target="_blank"><img src="whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon"></a></p>
+        <div class="contact-icons mb-3">
+            <a href="https://wa.me/1234567890" target="_blank">
+                <img src="whatsapp.png" alt="WhatsApp Icon">
+                Chat with us on WhatsApp
+            </a>
+            <a href="https://t.me/username" target="_blank" class="telegram">
+                <img src="telegram.png" alt="Telegram Icon">
+                Chat with us on Telegram
+            </a>
+        </div>
+        <p>&copy; 2025 Inviloader. All rights reserved.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
