--- a/index.html
+++ b/index.html
@@ -492,11 +492,11 @@
                     <a href="ffmpeg-windows.7z" class="download-btn" download>
                         <img src="windows.png" alt="Windows Icon" class="button-icon"> Download for Windows
                     </a>
-                    <a href="path/to/ffmpeg-mac.zip" class="download-btn" download>
+                    <a href="ffmpeg-mac-os.zip" class="download-btn" download>
                         <img src="mac-os.png" alt="Mac Icon" class="button-icon"> Download for Mac
                     </a>
-                    <a href="path/to/ffmpeg-linux.zip" class="download-btn" download>
-                        <img src="linux.png" alt="Linux Icon" class="button-icon"> Download for Linux
+                    <a  class="download-btn" >
+                        <img src="linux.png" alt="Linux Icon" class="button-icon"> Now waiting for Linux coming soon....
                     </a>
                 </div>
                 <li>Configure FFmpeg on your PC by adding it to your system's PATH environment variable.</li>
