--- a/index.html
+++ b/index.html
@@ -247,16 +247,19 @@
 }
 
 .download-btn {
-    background-color: #6a0dad; /* Button background color */
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    display: flex; /* Flex for icon alignment */
-    align-items: center;
+    background-color: #6a0dad; /* Background color */
+    color: white; /* Text color */
+    padding: 10px 20px; /* Inner padding */
+    border-radius: 5px; /* Rounded corners */
+    text-decoration: none; /* Remove underline */
+    font-weight: bold; /* Bold text */
+    display: flex; /* Flex for centering content */
+    align-items: center; /* Vertically center icon and text */
+    justify-content: center; /* Horizontally center icon and text */
     gap: 10px; /* Space between icon and text */
+    width: fit-content; /* Ensure the button fits content */
 }
+
 
 .download-btn:hover {
     background-color: #7323d0;
@@ -340,6 +343,7 @@
 }
 
 
+
     </style>
 </head>
 <body>
@@ -400,24 +404,33 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Row for Version 7.0 -->
                     <tr>
-                        <td>Inviloader Version 6.0</td>
-                        <td>15MB</td>
-                        <td>January 2025</td>
-                        <td>6.0.0</td>
-                        <td>
+                        <td>Inviloader Version 7.0 (x64) <strong><br>Only for Windows</br></strong></td> 
+                        <td>22.5MB</td>
+                        <td>25 January 2025</td>
+                        <td>7.0</td>
+                        <td class="text-start">
                             <ul class="list-unstyled mb-0">
-                                <li>Download YouTube videos in CMD</li>
-                                <li>Easy to use interface</li>
-                                <li>Supports all YouTube video formats</li>
+                                <li>&#8226; Download videos up to 1080p high HD quality ✔️</li>
+                                <li>&#8226; Download Audio from video with Highy Quality ✔️</li>
+                                <li>&#8226; Download speed is moderate/normal ✔️</li>
+                                <li>&#8226; Supports all YouTube videos and shorts<br>except Age-restricted videos which may need you to sign in. ✔️</br></li>
                             </ul>
                         </td>
-                        <td><a href="inviloader_v6.0.exe" class="download-btn" download>Download Now</a></td>
+                        <td style="text-align: center; vertical-align: middle;">
+                            <a href="inviloader_v7.0.exe" class="download-btn" style="display: inline-block;" download>
+                                <img src="windows.png" alt="Download Icon" style="width: 20px; height: 20px; margin-right: 5px;">
+                                Download Now (x64)
+                            </a>
+                        </td>
                     </tr>
+                    <!-- Add new rows below by copying and pasting this structure copy <tr>  </tr> block --> 
+                    <!-- Example row for another version -->
                 </tbody>
             </table>
         </div>
-
+    
         <h2 class="text-center mb-4">Paid Version</h2>
         <div class="table-responsive">
             <table class="table table-dark table-bordered text-center">
@@ -432,20 +445,26 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Row for Paid Version -->
                     <tr>
-                        <td>Inviloader Plus</td>
-                        <td>20MB</td>
-                        <td>December 2024</td>
-                        <td>5.5.0</td>
-                        <td>
+                        <td>Inviloader Pro</td>
+                        <td>----</td>
+                        <td>----</td>
+                        <td>----</td>
+                        <td class="text-start">
                             <ul class="list-unstyled mb-0">
-                                <li>Batch downloads</li>
-                                <li>Faster speeds</li>
-                                <li>Advanced features</li>
+                                <li>&#8226; ----</li>
+                        
                             </ul>
                         </td>
-                        <td><a href="inviloader_plus.exe" class="download-btn" download>Download Now</a></td>
+                        <td style="text-align: center; vertical-align: middle;">
+                            <!-- <a href="inviloader_plus.exe" class="download-btn" style="display: inline-block;" download> -->
+                                <img src="windows.png" alt="Download Icon" style="width: 20px; height: 20px; margin-right: 5px;">
+                                Coming soon......
+                            </a>
+                        </td>
                     </tr>
+                    <!-- Add new rows below by copying and pasting this structure -->
                 </tbody>
             </table>
         </div>
@@ -507,11 +526,11 @@
 
     <footer>
         <div class="contact-icons mb-3">
-            <a href="https://wa.me/1234567890" target="_blank">
+            <a href="https://wa.me/message/ASEANRX2H5WQI1" target="_blank">
                 <img src="whatsapp.png" alt="WhatsApp Icon">
                 Chat with us on WhatsApp
             </a>
-            <a href="https://t.me/username" target="_blank" class="telegram">
+            <a href="https://t.me/inviloader" target="_blank" class="telegram">
                 <img src="telegram.png" alt="Telegram Icon">
                 Chat with us on Telegram
             </a>
