--- a/index.html
+++ b/index.html
@@ -509,10 +509,10 @@
                 <li>Install FFmpeg by choosing your operating system below:</li>
                 <div class="download-buttons">
                     <a href="ffmpeg-windows.7z" class="download-btn" download>
-                        <img src="windows.png" alt="Windows Icon" class="button-icon"> Download for Windows
+                        <img src="windows.png" alt="Windows Icon" class="button-icon"> Download ffmpeg for Windows
                     </a>
                     <a href="ffmpeg-mac-os.zip" class="download-btn" download>
-                        <img src="mac-os.png" alt="Mac Icon" class="button-icon"> Download for Mac
+                        <img src="mac-os.png" alt="Mac Icon" class="button-icon"> Download ffmpeg for Mac
                     </a>
                     <a  class="download-btn" >
                         <img src="linux.png" alt="Linux Icon" class="button-icon"> Now waiting for Linux coming soon....
