--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             </table>
         </div>
     
-        <h2 class="text-center mb-4">Paid Version</h2>
+        <h2 class="text-center mb-4">Pro Version</h2>
         <div class="table-responsive">
             <table class="table table-dark table-bordered text-center">
                 <thead>
