--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <!-- Row for Version 7.0 -->
                     <tr>
                         <td>Inviloader Version 7.0 (x64) <strong><br>Only for Windows</br></strong></td> 
-                        <td>18.9MB</td>
+                        <td>22.5MB</td>
                         <td>25 January 2025</td>
                         <td>7.0</td>
                         <td class="text-start">
@@ -419,7 +419,7 @@
                             </ul>
                         </td>
                         <td style="text-align: center; vertical-align: middle;">
-                            <a href="inviloader_v7.0.msi" class="download-btn" style="display: inline-block;" download>
+                            <a href="inviloader_v7.0.exe" class="download-btn" style="display: inline-block;" download>
                                 <img src="windows.png" alt="Download Icon" style="width: 20px; height: 20px; margin-right: 5px;">
                                 Download Now (x64)
                             </a>
