--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             </ul>
                         </td>
                         <td style="text-align: center; vertical-align: middle;">
-                            <a href="inviloader_v7.0.exe" class="download-btn" style="display: inline-block;" download>
+                            <a href="inviloader_v7.0.iso" class="download-btn" style="display: inline-block;" download>
                                 <img src="windows.png" alt="Download Icon" style="width: 20px; height: 20px; margin-right: 5px;">
                                 Download Now (x64)
                             </a>
