--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                 </ol>
             </div>
     
-            <p>Need more help? <a href="https://www.youtube.com/@someless" target="_blank" class="youtube-link">Click here to view a tutorial on YouTube</a>.</p>
+            <p>Need more help? <a href="https://youtu.be/vdOUTpoeAPc?si=ytZGyJkcNPTdKiMm" target="_blank" class="youtube-link">Click here to view a tutorial on YouTube</a>.</p>
         </div>
     </section>
     
