--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
             </a>
         </div>
         <p>&copy; 2025 Inviloader. All rights reserved.</p>
-        <p>Developed and maintained by Someless | Support me by purchasing the Pro version</p>
+        <p>Developed and maintained by Someless | You may support me if you like the software </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
