--- a/index.html
+++ b/index.html
@@ -573,8 +573,32 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <td>Inviloader v8.0 (x64)<br><strong>Windows Only</strong><br><span class="latest-tag">LATEST</span></td>
+                        <td>20.4MB</td>
+                        <td>12 April 2025</td> <!-- Note: Future Date? -->
+                        <td>7.5</td>
+                        <td class="text-start">
+                            <ul class="list-unstyled mb-0">
+                                <li>✔️ Download videos with higher resolution up to 4k</li>
+                                <li>✔️ Download High Quality Audio</li>
+                                <li>✔️ Download Audio in different Qualities</li>
+                                <li>✔️ Moderate/Normal download speed</li>
+                                <li>✔️ Supports most YouTube videos & shorts<br><small>(Age-restricted may require sign-in)</small></li>
+                                <li>✔️ No installer required executable runs directly</li>
+                                <li>✔️ Fast and optimized</li><br><br>
+                            </ul>
+                        </td>
+                        <td>
+                            <a href="Inviloader_v8.0.zip" class="download-btn" download>
+                                <img src="windows.png" alt="" class="button-icon">
+                                Download Now (v8.0)
+                            </a>
+                        </td>
+                    </tr>
+                    <!-- Add more versions here if needed -->
                      <tr>
-                        <td>Inviloader v7.5 (x64)<br><strong>Windows Only</strong><br><span class="latest-tag">LATEST</span></td>
+                        <td>Inviloader v7.5 (x64)<br><strong>Windows Only</strong></td>
                         <td>20.4MB</td>
                         <td>28 March 2025</td> <!-- Note: Future Date? -->
                         <td>7.5</td>
