--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <!-- Showcase Section -->
     <section class="showcase-section">
         <div class="container">
-            <h2 class="text-center mb-4">Inviloader is Free to use </h2>
+            <h2 class="text-center mb-4">Get started now </h2>
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="showcase-image-wrapper">
