--- a/index.html
+++ b/index.html
@@ -371,11 +371,42 @@
             <p class="text-center text-secondary mb-5">Download the latest version or browse previous releases. All downloads are for Windows (x64).</p>
             
             <div class="accordion" id="releasesAccordion">
+                <!-- Release Item: v10.0.5 (Latest) -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTen">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
+                            Inviloader v10.0.5 <span class="latest-tag">Latest</span>
+                        </button>
+                    </h2>
+                    <div id="collapseTen" class="accordion-collapse collapse show" aria-labelledby="headingTen" data-bs-parent="#releasesAccordion">
+                        <div class="accordion-body">
+                            <div class="row align-items-center">
+                                <div class="col-md-8 release-details">
+                                    <p><strong>Release Date:</strong> June 26, 2025</p>
+                                    <p>This is a landmark release focusing on a complete overhaul of the user experience, application stability, and professional deployment.</p>
+                                    <ul>
+                                        <li>Professional Installer with intelligent version handling.</li>
+                                        <li>Dynamic Download Queue with live progress, speed, and ETA.</li>
+                                        <li>Enhanced UI/UX with smart buttons and no startup flash.</li>
+                                        <li>Robust URL handling and improved error messages.</li>
+                                        <li>Shorts video now supported.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-4 text-center text-md-end mt-3 mt-md-0">
+                                    <a href="https://github.com/boyoftime/youtube/releases/tag/v10.0.5" class="download-btn github-btn" target="_blank" rel="noopener noreferrer">
+                                        <img src="github.png" alt="" class="button-icon">
+                                        Download on GitHub
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Release Item: v10.0.0 (Latest) -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTen">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
-                            Inviloader v10.0.0 <span class="latest-tag">Latest</span>
+                            Inviloader v10.0.0
                         </button>
                     </h2>
                     <div id="collapseTen" class="accordion-collapse collapse show" aria-labelledby="headingTen" data-bs-parent="#releasesAccordion">
