--- a/index.html
+++ b/index.html
@@ -404,12 +404,12 @@
                 </div>
                 <!-- Release Item: v10.0.0 (Latest) -->
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTen">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
+                    <h2 class="accordion-header" id="heading_v10.0.0">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
                             Inviloader v10.0.0
                         </button>
                     </h2>
-                    <div id="collapseTen" class="accordion-collapse collapse show" aria-labelledby="headingTen" data-bs-parent="#releasesAccordion">
+                    <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#releasesAccordion">
                         <div class="accordion-body">
                             <div class="row align-items-center">
                                 <div class="col-md-8 release-details">
