--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
             <p class="text-center text-secondary mb-5">Click the button below to go to our official GitHub page where you can find the latest version and all previous releases for Windows (x64).</p>
             
             <div class="text-center">
-                <a href="https://github.com/boyoftime/youtube/releases" class="download-btn github-btn" target="_blank" rel="noopener noreferrer" style="padding: 1rem 2rem; font-size: 1.2rem;">
+                <a href="https://github.com/boyoftime/youtube/releases" class="download-btn" target="_blank" rel="noopener noreferrer" style="padding: 1rem 2rem; font-size: 1.2rem;">
                     <img src="github.png" alt="" class="button-icon" style="width: 24px; height: 24px;">
-                    View Releases on GitHub
+                    Download on Github
                 </a>
             </div>
         </div>
