--- a/watch.html
+++ b/watch.html
@@ -153,9 +153,9 @@
         <section class="download-links-section">
             <h3>Step 1: Download Required Files</h3>
             <div class="buttons-wrapper">
-                <a href="https://github.com/boyoftime/youtube/releases" class="download-btn github-btn" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/boyoftime/youtube/releases" class="download-btn" target="_blank" rel="noopener noreferrer">
                     <img src="github.png" alt="GitHub Icon" class="button-icon">
-                    Download Inviloader
+                    Download on Github
                 </a>
                 <a href="ffmpeg-7.1.1-full_build.7z" class="download-btn" download>
                     <img src="windows.png" alt="Windows Icon" class="button-icon">
